@@ -1252,12 +1252,14 @@ substitute these characters for the basic ascii ones:\n
           (t (elim-debug "UI Account Operation `%S' not implemented" value))) ))
 
 (defun garak-buddy-list-node-widget (proc bnode)
-  (let (kids uid menu type name mtail plabel blabel auid aicon alias)
-    (setq uid   (elim-avalue "bnode-uid"   bnode)
-          alias (elim-avalue "bnode-alias" bnode)
-          name  (elim-avalue "bnode-name"  bnode)
-          type  (elim-avalue "bnode-type"  bnode)
-          auid  (elim-avalue "account-uid" bnode)
+  (let (kids uid menu type name mtail plabel blabel auid aicon alias cname)
+    (setq uid   (elim-avalue "bnode-uid"     bnode)
+          alias (elim-avalue "bnode-alias"   bnode)
+          cname (elim-avalue "contact-alias" bnode)
+          name  (elim-avalue "bnode-name"    bnode)
+          type  (elim-avalue "bnode-type"    bnode)
+          auid  (elim-avalue "account-uid"   bnode)
+          name  (if (< 0 (length cname)) cname name)
           name  (if (< 0 (length alias)) alias name)
           mtail (list (garak-choice-item "--single-line")
                       (garak-choice-item "Remove" (cons :del uid))
