@@ -1,3 +1,8 @@
+2009-06-19  Vivek Dasmohapatra  <vivek@etla.org>
+
+	* elisp/garak.el: 
+	(garak-buddy-list-node-widget): prefer: alias > contact alias > name
+	
 2009-06-18  Vivek Dasmohapatra  <vivek@etla.org>
 
 	* handlers/notify_search_callback.c (_h_elim_notify_search_callback): 
